--- a/src/components/SummonerStatList.css
+++ b/src/components/SummonerStatList.css
@@ -43,6 +43,7 @@
 }
 
 .summoner-stat-elem .stat-info .champion-icon {
+    display: flex;
     position: relative;
 }
 
@@ -54,7 +55,11 @@
     position: absolute;
     right: 0;
     bottom: 0;
-    font-size: .75rem;
+    width: 15px;
+    height: 15px;
+    line-height: 15px;
+    font-size: .65rem;
+    text-align: center;
     color: var(--white-hover);
     background-color: rgba(0, 0, 0, .6);
 }
